# Galaxyai

./: ARCHITECTURE_EXPANSION_PLAN.md  CLAUDE.md  DESIGN.md  MOBILE_CLOUD_BLUEPRINT.md  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
app/: __init__.py
app/backend/: __init__.py  api.py  dependencies.py  main.py  schemas.py
app/backend/jobs/: __init__.py  models.py  queue.py  workers.py
app/backend/routers/: domains.py  falsify.py  ingest.py  map3d.py  query.py
app/backend/services/: __init__.py  galaxy_service.py
app/frontend/: .env.example  README.md  index.html  package.json
app/frontend/src/: App.tsx
app/frontend/src/api/: client.ts
app/frontend/src/components/: Badge.tsx  FactCard.tsx  Map3DPanel.tsx
app/frontend/src/mocks/: mockApi.ts
app/frontend/src/pages/: DomainRegistrationPage.tsx  FactIngestionPage.tsx  Map3DPage.tsx  QueryResultsPage.tsx
app/frontend/src/styles/: global.css
app/frontend/src/types/: dto.ts
galaxyai.egg-info/: PKG-INFO  SOURCES.txt
gma/: __init__.py  falsification.py  galaxy.py  learning.py  navigation.py  retrieval.py  structures.py
gma/infrastructure/: __init__.py
gma/infrastructure/persistence/: __init__.py  config.py  postgres_adapter.py  repositories.py  sqlite_adapter.py
tests/: test_backend_jobs.py  test_falsification.py  test_galaxy.py  test_learning.py  test_navigation.py  test_persistence.py  test_retrieval.py  test_structures.py
