[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxyai"
version = "0.1.0"
description = "Galactic Memory Architecture — a topological framework for continuous learning with structural stability."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
backend = ["fastapi>=0.110,<1.0"]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
